# Keras_tuto

./: ocr_model.ipynb  pyproject.toml
