[project]
name = "tuto-ocr"
version = "0.1.0"
description = ""
authors = [
    {name = "SimonGallien",email = "simongallien@orange.fr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keras (>=3.11.3,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
